; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_output.c_output_for_each_workspace.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_output.c_output_for_each_workspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, %struct.sway_workspace** }
%struct.sway_workspace = type opaque

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @output_for_each_workspace(%struct.sway_output* %0, void (%struct.sway_workspace*, i8*)* %1, i8* %2) #0 {
  %4 = alloca %struct.sway_output*, align 8
  %5 = alloca void (%struct.sway_workspace*, i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.sway_workspace*, align 8
  store %struct.sway_output* %0, %struct.sway_output** %4, align 8
  store void (%struct.sway_workspace*, i8*)* %1, void (%struct.sway_workspace*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %30, %3
  %10 = load i32, i32* %7, align 4
  %11 = load %struct.sway_output*, %struct.sway_output** %4, align 8
  %12 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp slt i32 %10, %15
  br i1 %16, label %17, label %33

17:                                               ; preds = %9
  %18 = load %struct.sway_output*, %struct.sway_output** %4, align 8
  %19 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load %struct.sway_workspace**, %struct.sway_workspace*** %21, align 8
  %23 = load i32, i32* %7, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.sway_workspace*, %struct.sway_workspace** %22, i64 %24
  %26 = load %struct.sway_workspace*, %struct.sway_workspace** %25, align 8
  store %struct.sway_workspace* %26, %struct.sway_workspace** %8, align 8
  %27 = load void (%struct.sway_workspace*, i8*)*, void (%struct.sway_workspace*, i8*)** %5, align 8
  %28 = load %struct.sway_workspace*, %struct.sway_workspace** %8, align 8
  %29 = load i8*, i8** %6, align 8
  call void %27(%struct.sway_workspace* %28, i8* %29)
  br label %30

30:                                               ; preds = %17
  %31 = load i32, i32* %7, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %7, align 4
  br label %9

33:                                               ; preds = %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
